--- a/individual-work/wba-projekt-2/styles/_header.scss
+++ b/individual-work/wba-projekt-2/styles/_header.scss
@@ -1,24 +1,89 @@
-@media (max-width: 1920px) and (max-height: 1080px) {
+header {
+    height: 8vh;
+    margin-bottom: 4em;
+    position: sticky;
+    top: 0;
+    background-color: white;
+    z-index: 999;
+    nav {
+        margin-inline: 8em;
+        .navbar-main {
+            display: flex;
+            justify-content: space-between;
+            align-content: center;
+            .logo {
+                img {
+                    height: 50px;
+                    margin: 10px;
+                }
+                #respon-img-mini {
+                    display: none;
+                }
+            }
+            .button {
+                margin: 10px;
+                margin-right: 15px;
+                .button-container li {
+                    position: relative;
+                    float: left;
+                    list-style: none;
+                    width: fit-content;
+                    text-align: center;
+                    background-color: transparent;
+                    font-size: 120%;
+                    margin-left: .7em;
+                }
+                .button-container a {
+                    text-decoration: none;
+                    color: black;
+                    .button-container a:after {
+                        background: none repeat scroll 0 0 transparent;
+                        bottom: 0;
+                        content: "";
+                        height: 2px;
+                        left: 50%;
+                        position: absolute;
+                        background: black;
+                        transition: width 0.3s ease 0s, left 0.3s ease 0s;
+                        width: 0;
+                    }
+                    .button-container a:hover:after {
+                        width: 100%;
+                        left: 0;
+                    }
+                }
+            }
+        }
+    }
+}
+
+@media (max-width: 414px) and (max-height: 736px)
+/* mobile iPhone 8 plus */
+
+{
     header {
+        margin-bottom: 1em;
         height: 8vh;
-        margin-bottom: 4em;
         position: sticky;
         top: 0;
         background-color: white;
         z-index: 999;
         nav {
-            margin-inline: 8em;
+            margin-inline: 1em;
             .navbar-main {
                 display: flex;
                 justify-content: space-between;
                 align-content: center;
                 .logo {
                     img {
-                        height: 50px;
+                        height: 40px;
                         margin: 10px;
                     }
-                    #respon-img-mini {
+                    #respon-img-big {
                         display: none;
+                    }
+                    #respon-img-mini {
+                        display: flex;
                     }
                 }
                 .button {
@@ -31,7 +96,7 @@
                         width: fit-content;
                         text-align: center;
                         background-color: transparent;
-                        font-size: 120%;
+                        font-size: 100%;
                         margin-left: .7em;
                     }
                     .button-container a {
@@ -57,118 +122,10 @@
             }
         }
     }
-    @media (max-width: 414px) and (max-height: 736px)
-    /* mobile iPhone 8 plus */
-    {
-        header {
-            height: 8vh;
-            margin-bottom: 2vh;
-            margin-inline: 1em;
-            nav {
-                .navbar-main {
-                    display: flex;
-                    justify-content: space-between;
-                    align-items: center;
-                    border-bottom: 1px solid black;
-                    .logo {
-                        img {
-                            height: 50px;
-                            margin: 10px;
-                        }
-                        #respon-img-big {
-                            display: none;
-                        }
-                    }
-                    .button {
-                        /* .button-container {
-                                 display: none;
-                            } */
-                        .button-container li {
-                            float: left;
-                            list-style: none;
-                            line-height: 20px;
-                            width: 150px;
-                            text-align: center;
-                        }
-                        .button-container li a {
-                            text-decoration: none;
-                            display: block;
-                            font-size: 120%;
-                            color: black;
-                        }
-                        /* .action {
-                        position: fixed;
-                        bottom: 50px;
-                        left: 50px;
-                        width: 50px;
-                        height: 50px;
-                        background: #fff;
-                        border-radius: 50%;
-                        border: 2px solid rgb(0, 0, 0);
-                        cursor: pointer;
-                        box-shadow: 0 5px 5px rgba(0, 0, 0, 0.1);
-                    }
-                    .action span {
-                        position: relative;
-                        width: 100%;
-                        height: 100%;
-                        display: flex;
-                        justify-content: center;
-                        align-items: center;
-                        font-size: 2em;
-                        color: #000000;
-                        transition: 0.3s ease-in-out;
-                        font-family: "Poppins", sans-serif;
-                    }
-                    .action.active span {
-                        transform: rotate(135deg);
-                    }
-                    .action ul {
-                        position: absolute;
-                        bottom: 55px;
-                        background: #fff;
-                        min-width: 250px;
-                        padding: 20px;
-                        border-radius: 20px;
-                        opacity: 0;
-                        visibility: hidden;
-                        transition: 0.3s;
-                    }
-                    .action.active ul {
-                        bottom: 65px;
-                        opacity: 1;
-                        visibility: visible;
-                        transition: 0.3s;
-                    }
-                    .action ul li {
-                        list-style: none;
-                        text-decoration: none;
-                        display: flex;
-                        justify-content: center;
-                        align-items: center;
-                        padding: 7px 0;
-                    }
-                    .action ul li:hover {
-                        font-weight: 600;
-                    }
-                    .action ul li:not(:last-child) {
-                        border-bottom: 1px solid rgba(0, 0, 0, 0.1);
-                    }
-                    .action ul li img {
-                        margin-right: 15px;
-                        opacity: 0.2;
-                        transform: scale(0.7);
-                    }
-                    .action ul li:hover img {
-                        opacity: 0.8;
-                        transform: scale(1);
-                    } */
-                    }
-                }
-            }
-        }
-    }
-    /* @media (min-width: 1366) and (min-height: 768px) {}
+}
+
+
+/* @media (min-width: 1366) and (min-height: 768px) {}
 
                     
                     @media (min-width: 1440) and (min-height: 900px) {}
@@ -185,4 +142,3 @@
                     
                                 /* @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap");
  */
-}
