--- a/individual-work/wba-projekt-2/styles/_homepage.scss
+++ b/individual-work/wba-projekt-2/styles/_homepage.scss
@@ -1,6 +1,226 @@
-@media (max-width: 1920px) and (max-height: 1080px) {
+#index {
+    margin-inline: 8em;
+    .first-section {
+        display: flex;
+        flex-direction: column;
+        #helper {
+            display: grid;
+            .first-section-heading-container,
+            .first-section-image-container {
+                grid-column: 1;
+                grid-row: 1;
+            }
+        }
+        .first-section-heading-container {
+            /* text-align: center; */
+            margin-top: 2em;
+            display: flex;
+            justify-content: center;
+            flex-direction: column;
+            width: 100%;
+            align-items: center;
+            h1 {
+                font-family: customFontFour;
+                color: white;
+                position: absolute;
+                z-index: 9;
+                display: inline-flex;
+                background-color: transparent;
+                /* text-decoration: underline; */
+                font-weight: bolder;
+                font-size: 6rem;
+                transition-duration: .2s;
+                user-select: none;
+            }
+        }
+        .first-section-image-container {
+            height: 50%;
+            width: 100%;
+            margin-top: 3em;
+            display: flex;
+            flex-direction: row;
+            justify-content: center;
+            position: relative;
+            img {
+                width: 100%;
+                max-width: 85em;
+                height: 30em;
+                transition-duration: .5s;
+                filter: blur(1px) grayscale(1);
+            }
+            img:hover {
+                filter: blur(0) grayscale(0);
+                z-index: 10;
+            }
+            .first-section-image-container:nth-child(1) {
+                padding-bottom: 5em;
+                height: 5em;
+            }
+            .first-section-image-container:nth-child(2) {
+                align-self: flex-end;
+                height: 100%;
+            }
+        }
+    }
+    .first-section-paragraph-container {
+        margin-top: 5.5em;
+        h2 {
+            padding: 2em 4em;
+            padding-left: 1em;
+            font-size: 1.6rem;
+            transition-duration: .2s;
+            border-left: 3px solid black;
+        }
+        h2:hover {
+            transition-duration: .2s;
+        }
+    }
+    .second-section {
+        /* height: max(100vh, 120vh); */
+        height: 100vh;
+        .second-section-content-organizer {
+            height: 80%;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            .second-section-first-image-desc-container {
+                display: flex;
+                flex-direction: row;
+                justify-content: center;
+                padding-right: 14em;
+                padding-bottom: 1em;
+                .second-section-first-desc-container {
+                    display: flex;
+                    justify-content: center;
+                    flex-direction: column;
+                    height: 100%;
+                    padding-left: 2em;
+                    p {
+                        width: 100%;
+                        max-width: 25em;
+                        height: 100%;
+                        /* padding: max(3vw, 1em); */
+                        /* font-size: clamp(1.20rem, calc(0.94rem + 1.32vw), 1.88rem); */
+                    }
+                    h4 {
+                        padding-bottom: .3em;
+                        font-weight: bold;
+                        justify-self: flex-start;
+                    }
+                }
+                img {
+                    width: 100%;
+                    max-width: 25em;
+                    height: auto;
+                }
+            }
+            .second-section-second-image-desc-container {
+                display: flex;
+                flex-direction: row;
+                justify-content: center;
+                padding-top: 1em;
+                padding-left: 13em;
+                .second-section-second-desc-container {
+                    display: flex;
+                    justify-content: center;
+                    flex-direction: column;
+                    height: 100%;
+                    padding-right: 4em;
+                    p {
+                        width: 40vw;
+                        max-width: 25em;
+                        height: 100%;
+                        /* padding: 3em;*/
+                        /* padding-bottom: -10em; */
+                        /* padding: max(3vw, 1em); */
+                        /* font-size: clamp(1.20rem, calc(0.94rem + 1.32vw), 1.88rem); */
+                    }
+                    h4 {
+                        padding-bottom: .3em;
+                        font-weight: bold;
+                    }
+                }
+                img {
+                    width: 100%;
+                    max-width: 25em;
+                    height: auto;
+                }
+            }
+        }
+        .second-section-paragraph-container {
+            min-height: 20%;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            margin-inline: 4em;
+            box-shadow: 0px 20px 20px -10px rgba(95, 95, 95, 0.329);
+            h3 {
+                margin: 4em;
+                margin-inline: 6em;
+                text-align: center;
+                font-size: 1.2rem;
+            }
+        }
+    }
+    .third-section {
+        margin-top: 10em;
+        .third-section-image-container {
+            margin-inline: 10em;
+            display: grid;
+            gap: 3em;
+            grid-template-columns: repeat(2, 1fr);
+            grid-template-rows: repeat(2, 1fr);
+            div {
+                display: flex;
+                align-items: center;
+                justify-content: center;
+            }
+            /* .third-section-image-container:nth-child(1) {}
+                .third-section-image-container:nth-child(2) {}
+                .third-section-image-container:nth-child(3) {}
+                .third-section-image-container:nth-child(4) {} */
+        }
+        .third-section-image-desc-container {
+            width: 100%;
+            margin-top: 10em;
+            display: flex;
+            .third-section-image-desc-sub-container {
+                display: inline-flex;
+                /* padding-inline: max(10em, 2vw); */
+                justify-content: center;
+                .third-section-desc-container {
+                    align-self: center;
+                    p,
+                    h4 {
+                        max-width: 20vw;
+                        padding: 2em;
+                        padding-left: 3em;
+                        font-size: 130%;
+                    }
+                    h4 {
+                        padding-bottom: 0;
+                        font-weight: bold;
+                    }
+                }
+                img {
+                    /* width: 100%;
+                                max-width: 35em;
+                                height: auto;
+                                max-height: 35em; */
+                    max-width: 30%;
+                    height: auto;
+                }
+            }
+        }
+    }
+}
+
+@media (max-width: 415px) and (max-height: 737px)
+/* mobile iPhone 8 plus */
+
+{
     #index {
-        margin-inline: 8em;
+        margin-inline: 1em;
         .first-section {
             display: flex;
             flex-direction: column;
@@ -29,7 +249,7 @@
                     background-color: transparent;
                     /* text-decoration: underline; */
                     font-weight: bolder;
-                    font-size: 6rem;
+                    font-size: 3rem;
                     transition-duration: .2s;
                     user-select: none;
                 }
@@ -44,8 +264,8 @@
                 position: relative;
                 img {
                     width: 100%;
-                    max-width: 85em;
-                    height: 30em;
+                    max-width: fit-content;
+                    height: 15em;
                     transition-duration: .5s;
                     filter: blur(1px) grayscale(1);
                 }
@@ -66,9 +286,9 @@
         .first-section-paragraph-container {
             margin-top: 5.5em;
             h2 {
-                padding: 2em 4em;
+                padding: 2em 2em;
                 padding-left: 1em;
-                font-size: 1.6rem;
+                font-size: 1.2rem;
                 transition-duration: .2s;
                 border-left: 3px solid black;
             }
@@ -78,7 +298,7 @@
         }
         .second-section {
             /* height: max(100vh, 120vh); */
-            height: 100vh;
+            /* height: 100vh; */
             .second-section-content-organizer {
                 height: 80%;
                 display: flex;
@@ -88,7 +308,7 @@
                     display: flex;
                     flex-direction: row;
                     justify-content: center;
-                    padding-right: 14em;
+                    /* padding-right: 14em; */
                     padding-bottom: 1em;
                     .second-section-first-desc-container {
                         display: flex;
@@ -120,7 +340,7 @@
                     flex-direction: row;
                     justify-content: center;
                     padding-top: 1em;
-                    padding-left: 13em;
+                    /* padding-left: 13em; */
                     .second-section-second-desc-container {
                         display: flex;
                         justify-content: center;
@@ -211,187 +431,6 @@
                             max-height: 35em; */
                     max-width: 30%;
                     height: auto;
-                }
-            }
-        }
-    }
-}
-
-@media (max-width: 414px) and (max-height: 736px)
-/* mobile iPhone 8 plus */
-
-{
-    #index {
-        margin-inline: 1em;
-    }
-    .first-section {
-        display: flex;
-        flex-direction: column;
-        .first-section-heading-container {
-            margin-top: 2em;
-            display: flex;
-            justify-content: center;
-            flex-direction: column;
-            width: 100%;
-            align-items: center;
-            h1 {
-                font-family: customFontTwo;
-                color: black;
-                display: inline-flex;
-                background-color: transparent;
-                font-weight: bolder;
-                font-size: 3rem;
-                transition-duration: .2s;
-            }
-        }
-        .first-section-image-container {
-            height: 50%;
-            width: 100%;
-            margin-top: 3em;
-            display: flex;
-            flex-direction: row;
-            justify-content: center;
-            position: relative;
-            img {
-                width: fit-content;
-                transition-duration: .5s;
-            }
-            .first-section-image-container:nth-child(1) {
-                padding-bottom: 5em;
-                height: 5em;
-            }
-            .first-section-image-container:nth-child(2) {
-                align-self: flex-end;
-                height: 100%;
-            }
-        }
-    }
-    .first-section-paragraph-container {
-        margin-top: 5em;
-        height: 100%;
-        h2 {
-            padding: 1em;
-            font-size: 1rem;
-            transition-duration: .2s;
-            border-left: 3px solid black;
-        }
-        h2:hover {
-            transition-duration: .2s;
-        }
-    }
-    .second-section {
-        height: 100%;
-        .second-section-content-organizer {
-            height: 80%;
-            display: flex;
-            flex-direction: column;
-            justify-content: center;
-            .second-section-first-image-desc-container {
-                display: flex;
-                flex-direction: column;
-                justify-content: center;
-                margin-top: 5em;
-                .second-section-first-desc-container {
-                    padding-top: 1em;
-                    padding-inline: 1em;
-                    p {
-                        width: fit-content;
-                        height: 100%
-                    }
-                    h4 {
-                        margin-top: .4em;
-                        padding-bottom: .2em;
-                        font-weight: bold;
-                    }
-                }
-                img {
-                    width: 100%;
-                    max-width: 25em;
-                    height: auto;
-                }
-            }
-            .second-section-second-image-desc-container {
-                display: flex;
-                flex-direction: column-reverse;
-                justify-content: center;
-                margin-top: 5em;
-                .second-section-second-desc-container {
-                    padding-top: 1em;
-                    padding-inline: 1em;
-                    p {
-                        width: fit-content;
-                        height: 100%;
-                    }
-                    h4 {
-                        margin-top: .4em;
-                        padding-bottom: .2em;
-                        font-weight: bold;
-                    }
-                }
-                img {
-                    width: 100%;
-                    max-width: 25em;
-                    height: auto;
-                }
-            }
-        }
-        .second-section-paragraph-container {
-            min-height: 20%;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            margin-inline: 1em;
-            margin-top: 4em;
-            h3 {
-                margin: 1em;
-                margin-inline: 1.2em;
-                text-align: center;
-                font-size: 1rem;
-                padding: 1em;
-            }
-        }
-        .second-section-paragraph-container {
-            filter: opacity(100%);
-            transition-duration: .2s;
-            box-shadow: 0px 20px 20px 0px rgba(95, 95, 95, 0.329);
-        }
-    }
-    .third-section {
-        margin-top: 5em;
-        .third-section-image-container {
-            display: grid;
-            grid-template-columns: repeat(1, 1fr);
-            grid-template-rows: repeat(4, 1fr);
-            div {
-                display: flex;
-                align-items: center;
-                justify-content: center;
-            }
-        }
-        .third-section-image-desc-container {
-            width: 100%;
-            margin-top: 5em;
-            display: flex;
-            .third-section-image-desc-sub-container {
-                display: flex;
-                align-items: center;
-                flex-direction: column-reverse;
-                .third-section-desc-container {
-                    p,
-                    h4 {
-                        padding-inline: 2em;
-                        font-size: 90%;
-                    }
-                    h4 {
-                        padding-bottom: .4em;
-                        font-weight: bold;
-                        font-size: 100%;
-                        text-align: center;
-                    }
-                }
-                img {
-                    margin-top: 1em;
-                    width: 70%;
                 }
             }
         }
