--- a/individual-work/wba-projekt-2/styles/_footer.scss
+++ b/individual-work/wba-projekt-2/styles/_footer.scss
@@ -24,6 +24,32 @@
     }
 }
 
+@media only screen and (max-width: $width-tablet-bp) {
+    .footer-main {
+        margin-inline: 12vw;
+        margin-top: 5em;
+        padding: .1em;
+        border-top: 2px solid $footer-color;
+        .footer-text-container {
+            display: flex;
+            flex-direction: column;
+            text-align: center;
+            &:nth-child(1) {
+                p {
+                    color: $footer-color;
+                    font-size: clamp(.8vw, 1em);
+                    margin-top: .1em;
+                    span {
+                        color: $footer-color;
+                        text-decoration: underline;
+                        font-size: clamp(.8vw, 1em);
+                    }
+                }
+            }
+        }
+    }
+}
+
 @media only screen and (max-width: $width-iphone8-bp) {
     .footer-main {
         margin-inline: 12vw;
